# FinanzApp

./: .gitignore  .replit  README.md  app.py  github_instructions.txt  pyproject.toml
.streamlit/: config.toml  config_dark.toml
attached_assets/: Pasted-streamlit-errors-StreamlitAPIException-Columns-can-only-be-placed-inside-other-columns-up-to-one-le-1745935317676.txt
data/: .gitkeep  dollar_rate_cache.json  dollar_rate_historical_cache.json  users.csv
pages/: accounts.py  dashboard.py  financial_goals.py  profile.py  reports.py  transactions.py
utils/: accounts.py  advanced_analytics.py  authentication.py  auto_categorize.py  currency_api.py  data_handler.py  email_sender.py  financial_goals.py  installment_calculator.py  theme_manager.py
