[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "twilio>=9.5.2",
]
